2003-03-19  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.c: (setup_config),
	(bacon_video_widget_unrealize),
	(bacon_video_widget_can_set_volume),
	(bacon_video_widget_set_volume), (bacon_video_widget_get_volume),
	(bacon_video_widget_get_metadata_bool): make the BaconVideoWidget
	modify an internal amp instead of touching the system volume

2003-03-18  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: updated the preferences window to respect the HIG
	better, look a bit cleaner and more spaced now
	* src/bacon-video-widget.c: (show_vfx_update),
	(bacon_video_widget_set_show_visuals):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (on_checkbutton2_toggled):
	* src/totem.c:
	* src/totem.h: the retval of bacon_video_widget_set_show_visuals() now
	indicates if the setting is taken into account immediately
	(Closes: #108595)

2003-03-17  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.c: (show_vfx_update),
	(bacon_video_widget_open), (bacon_video_widget_set_show_visuals):
	some work towards fixing #108595, the problem is that the xine
	engine hangs if we rewire the audio outputs while it's playing,
	disabled for now

2003-03-16  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-message-connection.c: (bacon_message_connection_new):
	install the socket in $(HOME)
	* src/bacon-video-widget.c: (bacon_video_widget_get_type): upd

2003-03-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: disable debug

2003-03-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (gdk_pixbuf_mirror),
	(add_holes_to_pixbuf): fix gdk_pixbuf_mirror, the right edge was off
	by one pixel, enable the mirroring of the holes now so the margins
	look OK

2003-03-14  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: upd
	* data/emblem-multimedia.png: removed
	* data/filmholes.png: added
	* src/totem-video-thumbnailer.c: (add_emblem_to_pixbuf),