@@ -1,3 +1,8 @@
+2003-03-20  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget.c: (size_changed_cb): fix stupid crash when
+	changing the resolution of the screen via RandR
+
 2003-03-19  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget.c: (setup_config),
